parser.output
Terminales no usados en la gramática

    tipoTablaTK
    tipoRefTK
    literal_cadenaTK
    aritmetico_divisionRealTK
    aritmetico_moduloTK


Estado 91 conflictos: 2 desplazamiento/reducción
Estado 133 conflictos: 6 reducción/reducción
Estado 189 conflictos: 6 reducción/reducción
Estado 190 conflictos: 6 reducción/reducción


Gramática

    0 $accept: desc_algoritmoV $end

    1 desc_algoritmoV: inicio_algoritmoTK identificadorTK operador_comp_secTK cabecera_algV bloque_algV fin_algoritmoTK puntoTK

    2 cabecera_algV: decl_globalesV decl_a_fV decl_ent_salV comentarioTK

    3 bloque_algV: bloqueV comentarioTK

    4 decl_globalesV: declaracion_tipoV decl_globalesV
    5               | declaracion_constV decl_globalesV
    6               | ε

    7 decl_a_fV: accion_dV decl_a_fV
    8          | funcion_dV decl_a_fV
    9          | ε

   10 bloqueV: declaracionesV instruccionesV

   11 declaracionesV: declaracion_tipoV declaracionesV
   12               | declaracion_constV declaracionesV
   13               | declaracion_varV declaracionesV
   14               | ε

   15 declaracion_tipoV: inicio_tipoTK lista_d_tipoV fin_tipoTK

   16 declaracion_constV: inicio_constTK lista_d_cteV fin_constTK

   17 declaracion_varV: inicio_varTK lista_d_varV fin_varTK

   18 lista_d_tipoV: declaracionTipoV
   19              | lista_d_tipoV declaracionTipoV

   20 declaracionTipoV: identificadorTK operador_igualTK d_tipoV operador_comp_secTK

   21 d_tipoV: inicio_tuplaTK lista_camposV fin_tuplaTK
   22        | tipoTK operador_inicio_arrayTK expresion_tV operador_subrangoTK expresion_tV operador_fin_arrayTK deTK d_tipoV
   23        | identificadorTK
   24        | expresion_tV operador_subrangoTK expresion_tV
   25        | tipoTK d_tipoV
   26        | tipoTK

   27 expresion_tV: expresionV
   28             | literal_caracterTK

   29 lista_camposV: declaracionCampoV
   30              | lista_camposV declaracionCampoV

   31 declaracionCampoV: identificadorTK operador_def_tipoTK d_tipoV operador_comp_secTK

   32 lista_d_cteV: declaracionDeConstanteV
   33             | lista_d_cteV declaracionDeConstanteV

   34 declaracionDeConstanteV: identificadorConstanteTK operador_igualTK literal_enteroTK operador_comp_secTK

   35 lista_d_varV: declaracionDeVariableV
   36             | lista_d_varV declaracionDeVariableV

   37 declaracionDeVariableV: lista_idV operador_def_tipoTK d_tipoV operador_comp_secTK

   38 lista_idV: declaracionDeListaIdV
   39          | lista_idV operador_separadorTK declaracionDeListaIdV

   40 declaracionDeListaIdV: identificadorTK

   41 decl_ent_salV: decl_entV
   42              | decl_entV decl_salV
   43              | decl_salV

   44 decl_entV: tipo_atributo_entTK lista_d_varV

   45 decl_salV: tipo_atributo_salTK lista_d_varV

   46 exp_aV: exp_aV aritmetico_sumaTK exp_aV
   47       | exp_aV aritmetico_restaTK exp_aV
   48       | exp_aV aritmetico_productoTK exp_aV
   49       | exp_aV aritmetico_divisionTK exp_aV
   50       | exp_aV operacionTK exp_aV
   51       | inicio_parentesisTK exp_aV fin_parentesisTK
   52       | operando_aV
   53       | literal_enteroTK
   54       | literal_realTK
   55       | aritmetico_restaTK exp_aV
   56       | aritmetico_sumaTK exp_aV

   57 exp_bV: exp_bV conjuncionTK exp_bV
   58       | exp_bV disyuncionTK exp_bV
   59       | noTK exp_bV
   60       | operando_bV
   61       | literal_booleanoTK
   62       | expresionV relacional_distintoTK expresionV
   63       | expresionV relacional_menor_igualTK expresionV
   64       | expresionV relacional_mayor_igualTK expresionV
   65       | expresionV relacional_menorTK expresionV
   66       | expresionV relacional_mayorTK expresionV
   67       | expresionV operador_igualTK expresionV
   68       | inicio_parentesisTK exp_bV fin_parentesisTK

   69 expresionV: exp_aV
   70           | exp_bV
   71           | funcion_llV

   72 operando_aV: identificadorTK
   73            | operando_aV puntoTK operando_aV
   74            | operando_aV operador_inicio_arrayTK expresionV operador_fin_arrayTK
   75            | operando_aV tipoTK

   76 operando_bV: identificadorBooleanoTK
   77            | operando_bV puntoTK operando_bV
   78            | operando_bV operador_inicio_arrayTK expresionV operador_fin_arrayTK
   79            | operando_bV tipoTK

   80 instruccionesV: instruccionV operador_comp_secTK instruccionesV
   81               | instruccionV

   82 instruccionV: continuarTK
   83             | asignacion_aV
   84             | asignacion_bV
   85             | alternativaV
   86             | iteracionV
   87             | accion_llV

   88 asignacion_aV: operando_aV operador_asignacionTK expresionV

   89 asignacion_bV: operando_bV operador_asignacionTK expresionV

   90 alternativaV: inicio_siTK expresionV operador_entoncesTK instruccionesV lista_opcionesV fin_siTK

   91 lista_opcionesV: operador_elseTK expresionV operador_entoncesTK instruccionesV lista_opcionesV
   92                | ε

   93 iteracionV: it_cota_fijaV
   94           | it_cota_expV

   95 it_cota_expV: inicio_mientrasTK expresionV hacerTK instruccionesV fin_mientrasTK

   96 it_cota_fijaV: inicio_paraTK identificadorTK operador_asignacionTK expresionV hastaTK expresionV hacerTK instruccionesV fin_paraTK

   97 accion_dV: inicio_accionTK a_cabeceraV bloqueV fin_accionTK

   98 funcion_dV: inicio_funcionTK f_cabeceraV bloqueV devTK expresionV fin_funcionTK

   99 a_cabeceraV: identificadorTK inicio_parentesisTK d_par_formV fin_parentesisTK operador_comp_secTK

  100 f_cabeceraV: identificadorTK inicio_parentesisTK lista_d_varV fin_parentesisTK devTK d_tipoV operador_comp_secTK

  101 d_par_formV: d_p_formV operador_comp_secTK d_par_formV
  102            | ε

  103 d_p_formV: tipo_atributo_entTK lista_idV operador_def_tipoTK d_tipoV
  104          | tipo_atributo_salTK lista_idV operador_def_tipoTK d_tipoV
  105          | tipo_atributo_ent_salTK lista_idV operador_def_tipoTK d_tipoV

  106 accion_llV: identificadorTK inicio_parentesisTK l_llV fin_parentesisTK

  107 funcion_llV: identificadorTK inicio_parentesisTK l_llV fin_parentesisTK

  108 l_llV: expresionV operador_separadorTK l_llV
  109      | expresionV


Terminales con las reglas donde aparecen

    $end (0) 0
    error (256)
    operador_asignacionTK (258) 88 89 96
    operador_comp_secTK <caracter> (259) 1 20 31 34 37 80 99 100 101
    operador_separadorTK (260) 39 108
    operador_subrangoTK (261) 22 24
    puntoTK (262) 1 73 77
    operador_def_tipoTK (263) 31 37 103 104 105
    operador_entoncesTK (264) 90 91
    operador_elseTK (265) 91
    operador_igualTK (266) 20 34 67
    operador_inicio_arrayTK (267) 22 74 78
    operador_fin_arrayTK (268) 22 74 78
    relacional_distintoTK (269) 62
    relacional_menor_igualTK (270) 63
    relacional_mayor_igualTK (271) 64
    relacional_menorTK (272) 65
    relacional_mayorTK (273) 66
    aritmetico_sumaTK (274) 46 56
    aritmetico_restaTK (275) 47 55
    aritmetico_productoTK (276) 48
    aritmetico_divisionTK (277) 49
    inicio_parentesisTK (278) 51 68 99 100 106 107
    fin_parentesisTK (279) 51 68 99 100 106 107
    tipoTK <tipo> (280) 22 25 26 75 79
    tipoTablaTK (281)
    tipoRefTK (282)
    conjuncionTK (283) 57
    disyuncionTK (284) 58
    tipo_atributo_entTK (285) 44 103
    tipo_atributo_salTK (286) 45 104
    tipo_atributo_ent_salTK (287) 105
    operacionTK (288) 50
    continuarTK (289) 82
    deTK (290) 22
    devTK (291) 98 100
    hacerTK (292) 95 96
    hastaTK (293) 96
    noTK (294) 59
    inicio_accionTK (295) 97
    fin_accionTK (296) 97
    inicio_algoritmoTK (297) 1
    fin_algoritmoTK (298) 1
    inicio_siTK (299) 90
    fin_siTK (300) 90
    inicio_mientrasTK (301) 95
    fin_mientrasTK (302) 95
    inicio_varTK (303) 17
    fin_varTK (304) 17
    inicio_constTK (305) 16
    fin_constTK (306) 16
    inicio_funcionTK (307) 98
    fin_funcionTK (308) 98
    inicio_paraTK (309) 96
    fin_paraTK (310) 96
    inicio_tuplaTK (311) 21
    fin_tuplaTK (312) 21
    inicio_tipoTK (313) 15
    fin_tipoTK (314) 15
    identificadorTK <cadena> (315) 1 20 23 31 40 72 96 99 100 106 107
    identificadorBooleanoTK <cadena> (316) 76
    identificadorConstanteTK <cadena> (317) 34
    literal_booleanoTK <literal> (318) 61
    literal_enteroTK <literal> (319) 34 53
    literal_realTK <literal> (320) 54
    literal_caracterTK <literal> (321) 28
    literal_cadenaTK <literal> (322)
    comentarioTK (323) 2 3
    aritmetico_divisionRealTK (324)
    aritmetico_moduloTK (325)


No terminales con las reglas donde aparecen

    $accept (71)
        on left: 0
    desc_algoritmoV (72)
        on left: 1
        on right: 0
    cabecera_algV (73)
        on left: 2
        on right: 1
    bloque_algV (74)
        on left: 3
        on right: 1
    decl_globalesV (75)
        on left: 4 5 6
        on right: 2 4 5
    decl_a_fV (76)
        on left: 7 8 9
        on right: 2 7 8
    bloqueV (77)
        on left: 10
        on right: 3 97 98
    declaracionesV (78)
        on left: 11 12 13 14
        on right: 10 11 12 13
    declaracion_tipoV (79)
        on left: 15
        on right: 4 11
    declaracion_constV (80)
        on left: 16
        on right: 5 12
    declaracion_varV (81)
        on left: 17
        on right: 13
    lista_d_tipoV (82)
        on left: 18 19
        on right: 15 19
    declaracionTipoV (83)
        on left: 20
        on right: 18 19
    d_tipoV (84)
        on left: 21 22 23 24 25 26
        on right: 20 22 25 31 37 100 103 104 105
    expresion_tV (85)
        on left: 27 28
        on right: 22 24
    lista_camposV (86)
        on left: 29 30
        on right: 21 30
    declaracionCampoV (87)
        on left: 31
        on right: 29 30
    lista_d_cteV (88)
        on left: 32 33
        on right: 16 33
    declaracionDeConstanteV (89)
        on left: 34
        on right: 32 33
    lista_d_varV (90)
        on left: 35 36
        on right: 17 36 44 45 100
    declaracionDeVariableV (91)
        on left: 37
        on right: 35 36
    lista_idV (92)
        on left: 38 39
        on right: 37 39 103 104 105
    declaracionDeListaIdV (93)
        on left: 40
        on right: 38 39
    decl_ent_salV (94)
        on left: 41 42 43
        on right: 2
    decl_entV (95)
        on left: 44
        on right: 41 42
    decl_salV (96)
        on left: 45
        on right: 42 43
    exp_aV (97)
        on left: 46 47 48 49 50 51 52 53 54 55 56
        on right: 46 47 48 49 50 51 55 56 69
    exp_bV (98)
        on left: 57 58 59 60 61 62 63 64 65 66 67 68
        on right: 57 58 59 68 70
    expresionV (99)
        on left: 69 70 71
        on right: 27 62 63 64 65 66 67 74 78 88 89 90 91 95 96 98 108 109
    operando_aV (100)
        on left: 72 73 74 75
        on right: 52 73 74 75 88
    operando_bV (101)
        on left: 76 77 78 79
        on right: 60 77 78 79 89
    instruccionesV (102)
        on left: 80 81
        on right: 10 80 90 91 95 96
    instruccionV (103)
        on left: 82 83 84 85 86 87
        on right: 80 81
    asignacion_aV (104)
        on left: 88
        on right: 83
    asignacion_bV (105)
        on left: 89
        on right: 84
    alternativaV (106)
        on left: 90
        on right: 85
    lista_opcionesV (107)
        on left: 91 92
        on right: 90 91
    iteracionV (108)
        on left: 93 94
        on right: 86
    it_cota_expV (109)
        on left: 95
        on right: 94
    it_cota_fijaV (110)
        on left: 96
        on right: 93
    accion_dV (111)
        on left: 97
        on right: 7
    funcion_dV (112)
        on left: 98
        on right: 8
    a_cabeceraV (113)
        on left: 99
        on right: 97
    f_cabeceraV (114)
        on left: 100
        on right: 98
    d_par_formV (115)
        on left: 101 102
        on right: 99 101
    d_p_formV (116)
        on left: 103 104 105
        on right: 101
    accion_llV (117)
        on left: 106
        on right: 87
    funcion_llV (118)
        on left: 107
        on right: 71
    l_llV (119)
        on left: 108 109
        on right: 106 107 108


Estado 0

    0 $accept: • desc_algoritmoV $end

    inicio_algoritmoTK  desplazar e ir al estado 1

    desc_algoritmoV  ir al estado 2


Estado 1

    1 desc_algoritmoV: inicio_algoritmoTK • identificadorTK operador_comp_secTK cabecera_algV bloque_algV fin_algoritmoTK puntoTK

    identificadorTK  desplazar e ir al estado 3


Estado 2

    0 $accept: desc_algoritmoV • $end

    $end  desplazar e ir al estado 4


Estado 3

    1 desc_algoritmoV: inicio_algoritmoTK identificadorTK • operador_comp_secTK cabecera_algV bloque_algV fin_algoritmoTK puntoTK

    operador_comp_secTK  desplazar e ir al estado 5


Estado 4

    0 $accept: desc_algoritmoV $end •

    $default  aceptar


Estado 5

    1 desc_algoritmoV: inicio_algoritmoTK identificadorTK operador_comp_secTK • cabecera_algV bloque_algV fin_algoritmoTK puntoTK

    inicio_constTK  desplazar e ir al estado 6
    inicio_tipoTK   desplazar e ir al estado 7

    $default  reduce usando la regla 6 (decl_globalesV)

    cabecera_algV       ir al estado 8
    decl_globalesV      ir al estado 9
    declaracion_tipoV   ir al estado 10
    declaracion_constV  ir al estado 11


Estado 6

   16 declaracion_constV: inicio_constTK • lista_d_cteV fin_constTK

    identificadorConstanteTK  desplazar e ir al estado 12

    lista_d_cteV             ir al estado 13
    declaracionDeConstanteV  ir al estado 14


Estado 7

   15 declaracion_tipoV: inicio_tipoTK • lista_d_tipoV fin_tipoTK

    identificadorTK  desplazar e ir al estado 15

    lista_d_tipoV     ir al estado 16
    declaracionTipoV  ir al estado 17


Estado 8

    1 desc_algoritmoV: inicio_algoritmoTK identificadorTK operador_comp_secTK cabecera_algV • bloque_algV fin_algoritmoTK puntoTK

    inicio_varTK    desplazar e ir al estado 18
    inicio_constTK  desplazar e ir al estado 6
    inicio_tipoTK   desplazar e ir al estado 7

    $default  reduce usando la regla 14 (declaracionesV)

    bloque_algV         ir al estado 19
    bloqueV             ir al estado 20
    declaracionesV      ir al estado 21
    declaracion_tipoV   ir al estado 22
    declaracion_constV  ir al estado 23
    declaracion_varV    ir al estado 24


Estado 9

    2 cabecera_algV: decl_globalesV • decl_a_fV decl_ent_salV comentarioTK

    inicio_accionTK   desplazar e ir al estado 25
    inicio_funcionTK  desplazar e ir al estado 26

    $default  reduce usando la regla 9 (decl_a_fV)

    decl_a_fV   ir al estado 27
    accion_dV   ir al estado 28
    funcion_dV  ir al estado 29


Estado 10

    4 decl_globalesV: declaracion_tipoV • decl_globalesV

    inicio_constTK  desplazar e ir al estado 6
    inicio_tipoTK   desplazar e ir al estado 7

    $default  reduce usando la regla 6 (decl_globalesV)

    decl_globalesV      ir al estado 30
    declaracion_tipoV   ir al estado 10
    declaracion_constV  ir al estado 11


Estado 11

    5 decl_globalesV: declaracion_constV • decl_globalesV

    inicio_constTK  desplazar e ir al estado 6
    inicio_tipoTK   desplazar e ir al estado 7

    $default  reduce usando la regla 6 (decl_globalesV)

    decl_globalesV      ir al estado 31
    declaracion_tipoV   ir al estado 10
    declaracion_constV  ir al estado 11


Estado 12

   34 declaracionDeConstanteV: identificadorConstanteTK • operador_igualTK literal_enteroTK operador_comp_secTK

    operador_igualTK  desplazar e ir al estado 32


Estado 13

   16 declaracion_constV: inicio_constTK lista_d_cteV • fin_constTK
   33 lista_d_cteV: lista_d_cteV • declaracionDeConstanteV

    fin_constTK               desplazar e ir al estado 33
    identificadorConstanteTK  desplazar e ir al estado 12

    declaracionDeConstanteV  ir al estado 34


Estado 14

   32 lista_d_cteV: declaracionDeConstanteV •

    $default  reduce usando la regla 32 (lista_d_cteV)


Estado 15

   20 declaracionTipoV: identificadorTK • operador_igualTK d_tipoV operador_comp_secTK

    operador_igualTK  desplazar e ir al estado 35


Estado 16

   15 declaracion_tipoV: inicio_tipoTK lista_d_tipoV • fin_tipoTK
   19 lista_d_tipoV: lista_d_tipoV • declaracionTipoV

    fin_tipoTK       desplazar e ir al estado 36
    identificadorTK  desplazar e ir al estado 15

    declaracionTipoV  ir al estado 37


Estado 17

   18 lista_d_tipoV: declaracionTipoV •

    $default  reduce usando la regla 18 (lista_d_tipoV)


Estado 18

   17 declaracion_varV: inicio_varTK • lista_d_varV fin_varTK

    identificadorTK  desplazar e ir al estado 38

    lista_d_varV            ir al estado 39
    declaracionDeVariableV  ir al estado 40
    lista_idV               ir al estado 41
    declaracionDeListaIdV   ir al estado 42


Estado 19

    1 desc_algoritmoV: inicio_algoritmoTK identificadorTK operador_comp_secTK cabecera_algV bloque_algV • fin_algoritmoTK puntoTK

    fin_algoritmoTK  desplazar e ir al estado 43


Estado 20

    3 bloque_algV: bloqueV • comentarioTK

    comentarioTK  desplazar e ir al estado 44


Estado 21

   10 bloqueV: declaracionesV • instruccionesV

    continuarTK              desplazar e ir al estado 45
    inicio_siTK              desplazar e ir al estado 46
    inicio_mientrasTK        desplazar e ir al estado 47
    inicio_paraTK            desplazar e ir al estado 48
    identificadorTK          desplazar e ir al estado 49
    identificadorBooleanoTK  desplazar e ir al estado 50

    operando_aV     ir al estado 51
    operando_bV     ir al estado 52
    instruccionesV  ir al estado 53
    instruccionV    ir al estado 54
    asignacion_aV   ir al estado 55
    asignacion_bV   ir al estado 56
    alternativaV    ir al estado 57
    iteracionV      ir al estado 58
    it_cota_expV    ir al estado 59
    it_cota_fijaV   ir al estado 60
    accion_llV      ir al estado 61


Estado 22

   11 declaracionesV: declaracion_tipoV • declaracionesV

    inicio_varTK    desplazar e ir al estado 18
    inicio_constTK  desplazar e ir al estado 6
    inicio_tipoTK   desplazar e ir al estado 7

    $default  reduce usando la regla 14 (declaracionesV)

    declaracionesV      ir al estado 62
    declaracion_tipoV   ir al estado 22
    declaracion_constV  ir al estado 23
    declaracion_varV    ir al estado 24


Estado 23

   12 declaracionesV: declaracion_constV • declaracionesV

    inicio_varTK    desplazar e ir al estado 18
    inicio_constTK  desplazar e ir al estado 6
    inicio_tipoTK   desplazar e ir al estado 7

    $default  reduce usando la regla 14 (declaracionesV)

    declaracionesV      ir al estado 63
    declaracion_tipoV   ir al estado 22
    declaracion_constV  ir al estado 23
    declaracion_varV    ir al estado 24


Estado 24

   13 declaracionesV: declaracion_varV • declaracionesV

    inicio_varTK    desplazar e ir al estado 18
    inicio_constTK  desplazar e ir al estado 6
    inicio_tipoTK   desplazar e ir al estado 7

    $default  reduce usando la regla 14 (declaracionesV)

    declaracionesV      ir al estado 64
    declaracion_tipoV   ir al estado 22
    declaracion_constV  ir al estado 23
    declaracion_varV    ir al estado 24


Estado 25

   97 accion_dV: inicio_accionTK • a_cabeceraV bloqueV fin_accionTK

    identificadorTK  desplazar e ir al estado 65

    a_cabeceraV  ir al estado 66


Estado 26

   98 funcion_dV: inicio_funcionTK • f_cabeceraV bloqueV devTK expresionV fin_funcionTK

    identificadorTK  desplazar e ir al estado 67

    f_cabeceraV  ir al estado 68


Estado 27

    2 cabecera_algV: decl_globalesV decl_a_fV • decl_ent_salV comentarioTK

    tipo_atributo_entTK  desplazar e ir al estado 69
    tipo_atributo_salTK  desplazar e ir al estado 70

    decl_ent_salV  ir al estado 71
    decl_entV      ir al estado 72
    decl_salV      ir al estado 73


Estado 28

    7 decl_a_fV: accion_dV • decl_a_fV

    inicio_accionTK   desplazar e ir al estado 25
    inicio_funcionTK  desplazar e ir al estado 26

    $default  reduce usando la regla 9 (decl_a_fV)

    decl_a_fV   ir al estado 74
    accion_dV   ir al estado 28
    funcion_dV  ir al estado 29


Estado 29

    8 decl_a_fV: funcion_dV • decl_a_fV

    inicio_accionTK   desplazar e ir al estado 25
    inicio_funcionTK  desplazar e ir al estado 26

    $default  reduce usando la regla 9 (decl_a_fV)

    decl_a_fV   ir al estado 75
    accion_dV   ir al estado 28
    funcion_dV  ir al estado 29


Estado 30

    4 decl_globalesV: declaracion_tipoV decl_globalesV •

    $default  reduce usando la regla 4 (decl_globalesV)


Estado 31

    5 decl_globalesV: declaracion_constV decl_globalesV •

    $default  reduce usando la regla 5 (decl_globalesV)


Estado 32

   34 declaracionDeConstanteV: identificadorConstanteTK operador_igualTK • literal_enteroTK operador_comp_secTK

    literal_enteroTK  desplazar e ir al estado 76


Estado 33

   16 declaracion_constV: inicio_constTK lista_d_cteV fin_constTK •

    $default  reduce usando la regla 16 (declaracion_constV)


Estado 34

   33 lista_d_cteV: lista_d_cteV declaracionDeConstanteV •

    $default  reduce usando la regla 33 (lista_d_cteV)


Estado 35

   20 declaracionTipoV: identificadorTK operador_igualTK • d_tipoV operador_comp_secTK

    aritmetico_sumaTK        desplazar e ir al estado 77
    aritmetico_restaTK       desplazar e ir al estado 78
    inicio_parentesisTK      desplazar e ir al estado 79
    tipoTK                   desplazar e ir al estado 80
    noTK                     desplazar e ir al estado 81
    inicio_tuplaTK           desplazar e ir al estado 82
    identificadorTK          desplazar e ir al estado 83
    identificadorBooleanoTK  desplazar e ir al estado 50
    literal_booleanoTK       desplazar e ir al estado 84
    literal_enteroTK         desplazar e ir al estado 85
    literal_realTK           desplazar e ir al estado 86
    literal_caracterTK       desplazar e ir al estado 87

    d_tipoV       ir al estado 88
    expresion_tV  ir al estado 89
    exp_aV        ir al estado 90
    exp_bV        ir al estado 91
    expresionV    ir al estado 92
    operando_aV   ir al estado 93
    operando_bV   ir al estado 94
    funcion_llV   ir al estado 95


Estado 36

   15 declaracion_tipoV: inicio_tipoTK lista_d_tipoV fin_tipoTK •

    $default  reduce usando la regla 15 (declaracion_tipoV)


Estado 37

   19 lista_d_tipoV: lista_d_tipoV declaracionTipoV •

    $default  reduce usando la regla 19 (lista_d_tipoV)


Estado 38

   40 declaracionDeListaIdV: identificadorTK •

    $default  reduce usando la regla 40 (declaracionDeListaIdV)


Estado 39

   17 declaracion_varV: inicio_varTK lista_d_varV • fin_varTK
   36 lista_d_varV: lista_d_varV • declaracionDeVariableV

    fin_varTK        desplazar e ir al estado 96
    identificadorTK  desplazar e ir al estado 38

    declaracionDeVariableV  ir al estado 97
    lista_idV               ir al estado 41
    declaracionDeListaIdV   ir al estado 42


Estado 40

   35 lista_d_varV: declaracionDeVariableV •

    $default  reduce usando la regla 35 (lista_d_varV)


Estado 41

   37 declaracionDeVariableV: lista_idV • operador_def_tipoTK d_tipoV operador_comp_secTK
   39 lista_idV: lista_idV • operador_separadorTK declaracionDeListaIdV

    operador_separadorTK  desplazar e ir al estado 98
    operador_def_tipoTK   desplazar e ir al estado 99


Estado 42

   38 lista_idV: declaracionDeListaIdV •

    $default  reduce usando la regla 38 (lista_idV)


Estado 43

    1 desc_algoritmoV: inicio_algoritmoTK identificadorTK operador_comp_secTK cabecera_algV bloque_algV fin_algoritmoTK • puntoTK

    puntoTK  desplazar e ir al estado 100


Estado 44

    3 bloque_algV: bloqueV comentarioTK •

    $default  reduce usando la regla 3 (bloque_algV)


Estado 45

   82 instruccionV: continuarTK •

    $default  reduce usando la regla 82 (instruccionV)


Estado 46

   90 alternativaV: inicio_siTK • expresionV operador_entoncesTK instruccionesV lista_opcionesV fin_siTK

    aritmetico_sumaTK        desplazar e ir al estado 77
    aritmetico_restaTK       desplazar e ir al estado 78
    inicio_parentesisTK      desplazar e ir al estado 79
    noTK                     desplazar e ir al estado 81
    identificadorTK          desplazar e ir al estado 101
    identificadorBooleanoTK  desplazar e ir al estado 50
    literal_booleanoTK       desplazar e ir al estado 84
    literal_enteroTK         desplazar e ir al estado 85
    literal_realTK           desplazar e ir al estado 86

    exp_aV       ir al estado 90
    exp_bV       ir al estado 91
    expresionV   ir al estado 102
    operando_aV  ir al estado 93
    operando_bV  ir al estado 94
    funcion_llV  ir al estado 95


Estado 47

   95 it_cota_expV: inicio_mientrasTK • expresionV hacerTK instruccionesV fin_mientrasTK

    aritmetico_sumaTK        desplazar e ir al estado 77
    aritmetico_restaTK       desplazar e ir al estado 78
    inicio_parentesisTK      desplazar e ir al estado 79
    noTK                     desplazar e ir al estado 81
    identificadorTK          desplazar e ir al estado 101
    identificadorBooleanoTK  desplazar e ir al estado 50
    literal_booleanoTK       desplazar e ir al estado 84
    literal_enteroTK         desplazar e ir al estado 85
    literal_realTK           desplazar e ir al estado 86

    exp_aV       ir al estado 90
    exp_bV       ir al estado 91
    expresionV   ir al estado 103
    operando_aV  ir al estado 93
    operando_bV  ir al estado 94
    funcion_llV  ir al estado 95


Estado 48

   96 it_cota_fijaV: inicio_paraTK • identificadorTK operador_asignacionTK expresionV hastaTK expresionV hacerTK instruccionesV fin_paraTK

    identificadorTK  desplazar e ir al estado 104


Estado 49

   72 operando_aV: identificadorTK •
  106 accion_llV: identificadorTK • inicio_parentesisTK l_llV fin_parentesisTK

    inicio_parentesisTK  desplazar e ir al estado 105

    $default  reduce usando la regla 72 (operando_aV)


Estado 50

   76 operando_bV: identificadorBooleanoTK •

    $default  reduce usando la regla 76 (operando_bV)


Estado 51

   73 operando_aV: operando_aV • puntoTK operando_aV
   74            | operando_aV • operador_inicio_arrayTK expresionV operador_fin_arrayTK
   75            | operando_aV • tipoTK
   88 asignacion_aV: operando_aV • operador_asignacionTK expresionV

    operador_asignacionTK    desplazar e ir al estado 106
    puntoTK                  desplazar e ir al estado 107
    operador_inicio_arrayTK  desplazar e ir al estado 108
    tipoTK                   desplazar e ir al estado 109


Estado 52

   77 operando_bV: operando_bV • puntoTK operando_bV
   78            | operando_bV • operador_inicio_arrayTK expresionV operador_fin_arrayTK
   79            | operando_bV • tipoTK
   89 asignacion_bV: operando_bV • operador_asignacionTK expresionV

    operador_asignacionTK    desplazar e ir al estado 110
    puntoTK                  desplazar e ir al estado 111
    operador_inicio_arrayTK  desplazar e ir al estado 112
    tipoTK                   desplazar e ir al estado 113


Estado 53

   10 bloqueV: declaracionesV instruccionesV •

    $default  reduce usando la regla 10 (bloqueV)


Estado 54

   80 instruccionesV: instruccionV • operador_comp_secTK instruccionesV
   81               | instruccionV •

    operador_comp_secTK  desplazar e ir al estado 114

    $default  reduce usando la regla 81 (instruccionesV)


Estado 55

   83 instruccionV: asignacion_aV •

    $default  reduce usando la regla 83 (instruccionV)


Estado 56

   84 instruccionV: asignacion_bV •

    $default  reduce usando la regla 84 (instruccionV)


Estado 57

   85 instruccionV: alternativaV •

    $default  reduce usando la regla 85 (instruccionV)


Estado 58

   86 instruccionV: iteracionV •

    $default  reduce usando la regla 86 (instruccionV)


Estado 59

   94 iteracionV: it_cota_expV •

    $default  reduce usando la regla 94 (iteracionV)


Estado 60

   93 iteracionV: it_cota_fijaV •

    $default  reduce usando la regla 93 (iteracionV)


Estado 61

   87 instruccionV: accion_llV •

    $default  reduce usando la regla 87 (instruccionV)


Estado 62

   11 declaracionesV: declaracion_tipoV declaracionesV •

    $default  reduce usando la regla 11 (declaracionesV)


Estado 63

   12 declaracionesV: declaracion_constV declaracionesV •

    $default  reduce usando la regla 12 (declaracionesV)


Estado 64

   13 declaracionesV: declaracion_varV declaracionesV •

    $default  reduce usando la regla 13 (declaracionesV)


Estado 65

   99 a_cabeceraV: identificadorTK • inicio_parentesisTK d_par_formV fin_parentesisTK operador_comp_secTK

    inicio_parentesisTK  desplazar e ir al estado 115


Estado 66

   97 accion_dV: inicio_accionTK a_cabeceraV • bloqueV fin_accionTK

    inicio_varTK    desplazar e ir al estado 18
    inicio_constTK  desplazar e ir al estado 6
    inicio_tipoTK   desplazar e ir al estado 7

    $default  reduce usando la regla 14 (declaracionesV)

    bloqueV             ir al estado 116
    declaracionesV      ir al estado 21
    declaracion_tipoV   ir al estado 22
    declaracion_constV  ir al estado 23
    declaracion_varV    ir al estado 24


Estado 67

  100 f_cabeceraV: identificadorTK • inicio_parentesisTK lista_d_varV fin_parentesisTK devTK d_tipoV operador_comp_secTK

    inicio_parentesisTK  desplazar e ir al estado 117


Estado 68

   98 funcion_dV: inicio_funcionTK f_cabeceraV • bloqueV devTK expresionV fin_funcionTK

    inicio_varTK    desplazar e ir al estado 18
    inicio_constTK  desplazar e ir al estado 6
    inicio_tipoTK   desplazar e ir al estado 7

    $default  reduce usando la regla 14 (declaracionesV)

    bloqueV             ir al estado 118
    declaracionesV      ir al estado 21
    declaracion_tipoV   ir al estado 22
    declaracion_constV  ir al estado 23
    declaracion_varV    ir al estado 24


Estado 69

   44 decl_entV: tipo_atributo_entTK • lista_d_varV

    identificadorTK  desplazar e ir al estado 38

    lista_d_varV            ir al estado 119
    declaracionDeVariableV  ir al estado 40
    lista_idV               ir al estado 41
    declaracionDeListaIdV   ir al estado 42


Estado 70

   45 decl_salV: tipo_atributo_salTK • lista_d_varV

    identificadorTK  desplazar e ir al estado 38

    lista_d_varV            ir al estado 120
    declaracionDeVariableV  ir al estado 40
    lista_idV               ir al estado 41
    declaracionDeListaIdV   ir al estado 42


Estado 71

    2 cabecera_algV: decl_globalesV decl_a_fV decl_ent_salV • comentarioTK

    comentarioTK  desplazar e ir al estado 121


Estado 72

   41 decl_ent_salV: decl_entV •
   42              | decl_entV • decl_salV

    tipo_atributo_salTK  desplazar e ir al estado 70

    $default  reduce usando la regla 41 (decl_ent_salV)

    decl_salV  ir al estado 122


Estado 73

   43 decl_ent_salV: decl_salV •

    $default  reduce usando la regla 43 (decl_ent_salV)


Estado 74

    7 decl_a_fV: accion_dV decl_a_fV •

    $default  reduce usando la regla 7 (decl_a_fV)


Estado 75

    8 decl_a_fV: funcion_dV decl_a_fV •

    $default  reduce usando la regla 8 (decl_a_fV)


Estado 76

   34 declaracionDeConstanteV: identificadorConstanteTK operador_igualTK literal_enteroTK • operador_comp_secTK

    operador_comp_secTK  desplazar e ir al estado 123


Estado 77

   56 exp_aV: aritmetico_sumaTK • exp_aV

    aritmetico_sumaTK    desplazar e ir al estado 77
    aritmetico_restaTK   desplazar e ir al estado 78
    inicio_parentesisTK  desplazar e ir al estado 124
    identificadorTK      desplazar e ir al estado 125
    literal_enteroTK     desplazar e ir al estado 85
    literal_realTK       desplazar e ir al estado 86

    exp_aV       ir al estado 126
    operando_aV  ir al estado 93


Estado 78

   55 exp_aV: aritmetico_restaTK • exp_aV

    aritmetico_sumaTK    desplazar e ir al estado 77
    aritmetico_restaTK   desplazar e ir al estado 78
    inicio_parentesisTK  desplazar e ir al estado 124
    identificadorTK      desplazar e ir al estado 125
    literal_enteroTK     desplazar e ir al estado 85
    literal_realTK       desplazar e ir al estado 86

    exp_aV       ir al estado 127
    operando_aV  ir al estado 93


Estado 79
